--- a/index.html
+++ b/index.html
@@ -14,20 +14,21 @@
     <body>
 
         <div id="navbar">
+          <div id="popover1"></div>
           <div id="sidebar">
                 <div id="holder">
                   <div class="icon" id="email">
-                      <img src="assets/images/email2.png" class="image">
+                      <img src="assets/images/email3.png" class="image">
                   </div>
                 </div>
                 <div id="holder">
                   <div class="icon">
-                      <img src="assets/images/phone2.png" id="phone">
+                      <img src="assets/images/phone3.png" id="phone">
                   </div>
                 </div>
                 <div id="holder">
                   <div class="icon">
-                      <img src="assets/images/mail2.png" id="mail">
+                      <img src="assets/images/mail3.png" id="mail">
                   </div>
                 </div>
           </div>
@@ -76,6 +77,13 @@
 
         </div>
 
+        <div id="more">
+            <img src="assets/images/more.png" class="image">
+        </div>
+
+        <div id="some">
+          <img src="assets/images/some.png" class="image">
+        </div>
 
         <div id="content-container">
             <div id="intro">
@@ -90,11 +98,10 @@
                     <!--<div class="line-box" id="three">
                         <div class="hi" id="three">
                     </div>-->
-                    <div id="more">
-                        <img src="assets/images/more.png" class="image">
-                    </div>
+
                 </div>
             </div>
+
             <div id="idea">
                 <div id="idea-content">
                     <div id="believe">
@@ -116,12 +123,51 @@
                     </div>
                 </div>
             </div>
+
+            <div id="portfolio">
+                <div id="portfolio-content">
+                  <img src="assets/images/portfolio2.png" class="image">
+                </div>
+
+                <div id="graphic-design">
+                  <div class="button" id="b1"></div>
+                  <div class="button" id="b2"></div>
+                </div>
+
+                <div id="fine-arts">
+                  <div class="button" id="b3"></div>
+                  <div class="button" id="b4"></div>
+                  <div class="button" id="b5"></div>
+                  <div class="button" id="b6"></div>
+                  <div class="button" id="b7"></div>
+                  <div class="button" id="b8"></div>
+                </div>
+
+                <div id="photography">
+                  <div class="button" id="b9"></div>
+                  <div class="button" id="b10"></div>
+                  <div class="button" id="b11"></div>
+                </div>
+
+                <div class="artwork" id="a1"></div>
+                <div class="artwork" id="a2"></div>
+                <div class="artwork" id="a3"></div>
+                <div class="artwork" id="a4"></div>
+                <div class="artwork" id="a5"></div>
+                <div class="artwork" id="a6"></div>
+                <div class="artwork" id="a7"></div>
+                <div class="artwork" id="a8"></div>
+                <div class="artwork" id="a9"></div>
+                <div class="artwork" id="a10"></div>
+                <div class="artwork" id="a11"></div>
+            </div>
+
             <div id="resume">
                 <div id="age">
                     <img src="assets/images/age.png" class="image">
                 </div>
                 <div id="education">
-                    <img src="assets/images/education.png" class="image">
+                    <img src="assets/images/education2.png" class="image">
                 </div>
                 <div id="skills">
                   <div id="technicaltitle">
@@ -158,12 +204,6 @@
                   </div>
               </div>
             </div>
-            <div id="portfolio"></div>
-                <div id="laptop-holder">
-                  <div id="laptop">
-                    <img src="assets/images/laptop.png" class="image">
-                  </div>
-                </div>
         </div>
 
     </body>
