--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
   <title> Adriana Babakanian </title>
   <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Raleway">
   <link rel="stylesheet" type="text/css"
