--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <title> Adriana Babakanian </title>
-  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
-  <script src="assets/js/script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script language="JavaScript" type="text/javascript" src="assets/js/script.js"></script>
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Raleway">
