added InnoD logo design

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="menu-contact-wrapper">
           <a href="https://www.behance.net/adrianababakanian" target="_blank">
             <div class="menu-contact">
-              <div class="menu-hide"><img style="z-index:100" src="be3flip.png"></div>
-              <div class="menu-flip"><img style="z-index:200" src="be2.png"></div>
+              <div class="menu-hide"><img style="z-index:100" src="assets/images/be3flip.png"></div>
+              <div class="menu-flip"><img style="z-index:200" src="assets/images/be2.png"></div>
               <div class="menu-circle"></div>
             </div>
           </a>
@@ -171,7 +171,7 @@
         <p>
           Branding, Marketing, & UI/UX Designer at <a href="https://www.feasterworks.com" target="_blank">Feaster</a> </br>
           <a href="http://innovativedesign.club/" target="_blank"> Innovative Design</a>, Marketing & Gold Tier </br>
-          UI/UX & Branding Designer at Laud'Em
+          UI/UX & Branding Designer at <span style="color:#f85563;">Laud'Em</span>
         </p>
         <p> <b>Web Development &nbsp &nbsp &nbsp </b> Ruby on Rails | HTML | CSS | JavaScript </br>
         <b>Programming &nbsp &nbsp &nbsp </b> Java | Python | Ruby | C (in progress)</br>
@@ -308,7 +308,6 @@
         I decided to make an illustrated map of <a href="http://www.berkeley.edu/" target="_blank">UC Berkeley</a>. Below are some of the buildings I have completed so far &mdash; check back soon to see more illustrations of
         our beautiful architecture and the final
         version of the map! </p>
-      </menu>
     </div>
     <div class="introimage-wrapper"><div class="introimage map"><img src="assets/images/map2.png"></div></div>
     <div class="workcontent">
@@ -374,7 +373,15 @@
     <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/flyersfrontback.png" class="ver"></div></div>
     <div class="caption"> <p><em> The front and back of each of the recruitement flyers. </em> </p></div>
     <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/flyersall.png" class="hor"></div></div>
-    <div class="caption bottom"> <p><em> All four iterations of the recruitement flyers. The last three were made by other memebers of my tier. </em> </p></div>
+    <div class="caption"> <p><em> All four iterations of the recruitement flyers. The last three were made by other memebers of my tier. </em> </p></div>
+    <div class="workcontent">
+      <h2 class="tech"> InnoD Logo Design </h2>
+      <p> Part of our recruitement campaign every semester is making a new logo out of our existing logo. InnoD's logo is made of three cascading, overlapping circles &mdash;
+        which gives virtually a blank canvas to turn it into whatever you can imagine! This semester I created the design shown below as our new logo. You can see it as the profile
+        picture for our <a href="https://www.facebook.com/InnovativeDesignUCB/" target="_blank"> Facebook page </a>.
+    </div>
+    <div class="introimage-wrapper"><div class="introimage blue"><img src="assets/images/desklogo.png"></div></div>
+    <div class="caption bottom"> <p><em> Innovative Design's semesterly logo for Spring 2017. </em> </p></div>
   </div>
 
   <div class="workpop" id="weatherpop">
