--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <div class="workcontent">
       <h2 class="tech"> Technologies: Adobe Illustrator, Sketch </h2>
       <p> <em> <b> Please note that all materials here are copyright and property of Feaster, Inc.
-      Please visit out landing page for more information. </b> </em> </p>
+      Please visit our landing page for more information. </b> </em> </p>
       <h2 class="tech"> Logo Iterations </h2>
       <p> My first task as a member of the Feaster team was to develop a logo and logo text to fuel all of our
         branding identity. My goal was to communicate to the user the key features that Feaster delivers &mdash; that is,
