added first compressed PNGs

--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
         </div>
         <div class="work gdwork" id="last">
           <div class="workcover">Graphic Design & Illustration</div>
-          <img src="assets/images/gd2.png">
+          <img src="assets/images/gd2-min.png">
         </div>
         <div class="work personalwork">
           <div class="workcover">Laud'em | UI/UX & Branding Design</div>
-          <img src="assets/images/laud4.png">
+          <img src="assets/images/laud4-min.png">
         </div>
       </div>
     </div>
@@ -141,7 +141,7 @@
       </div>
       <div class="work interconnectedwork" id="last">
         <div class="workcover">Interconnected</div>
-        <img src="assets/images/interconnected.png" class="hor">
+        <img src="assets/images/interconnected-min.png" class="hor">
       </div>
       <div class="work woodenwork">
         <div class="workcover">Wooden</div>
@@ -370,7 +370,7 @@
         four iterations we created for this season. Each flyer depicts a representation of the workspace for a member from each of the four different tiers of the club. I was responsible for
         making the desk of the graphic designer. I love how these turned out &mdash; they do an excellent job of capturing the spirit of Innovative Design. </p>
     </div>
-    <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/flyersfrontback.png" class="ver"></div></div>
+    <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/flyersfrontback-min.png" class="ver"></div></div>
     <div class="caption"> <p><em> The front and back of each of the recruitement flyers. </em> </p></div>
     <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/flyersall.png" class="hor"></div></div>
     <div class="caption"> <p><em> All four iterations of the recruitement flyers. The last three were made by other memebers of my tier. </em> </p></div>
@@ -380,7 +380,7 @@
         which gives virtually a blank canvas to turn it into whatever you can imagine! This semester I created the design shown below as our new logo. You can see it as the profile
         picture for our <a href="https://www.facebook.com/InnovativeDesignUCB/" target="_blank"> Facebook page </a>.
     </div>
-    <div class="introimage-wrapper"><div class="introimage blue"><img src="assets/images/desklogo.png"></div></div>
+    <div class="introimage-wrapper"><div class="introimage blue"><img src="assets/images/desklogomin.png"></div></div>
     <div class="caption bottom"> <p><em> Innovative Design's semesterly logo for Spring 2017. </em> </p></div>
   </div>
 
@@ -397,7 +397,7 @@
         on the App Store and Google Play within the next few weeks &mdash; be sure to check back soon for a link to download the very first app that I
         designed! </p>
     </div>
-    <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/laud4.png"></div></div>
+    <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/laud4-min.png"></div></div>
     <div class="workcontent">
       <h2 class="tech"> Technologies: Adobe Illustrator, Sketch, Zeplin </h2>
       <p> I cannot yet disclose all of the screens of the app, but below are some of the branding materials that I created for
@@ -519,7 +519,7 @@
 
   <div class="workpop" id="interconnectedpop">
     <div class="goback clickable artgoback"><div class="up"><img src="assets/images/up.png" class="x"></div><p style="margin-top:0px"> back to fine art </p></div>
-    <div class="artwork-wrapper"><img src="assets/images/interconnected.png"></div>
+    <div class="artwork-wrapper"><img src="assets/images/interconnected-min.png"></div>
   </div>
 
   <div class="workpop" id="woodenpop">
