--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
         <div class="work buildingswork" id="map">
           <div class="workcover">Map of Berkeley | Graphic Design</div>
-          <img src="assets/images/map2.png" class="hor">
+          <img src="assets/images/map2-min.png" class="hor">
         </div>
         <div class="work innowork">
           <div class="workcover">Innovative Design | Marketing Design</div>
@@ -98,11 +98,11 @@
         </div>
         <div class="work gdwork" id="last">
           <div class="workcover">Graphic Design & Illustration</div>
-          <img src="assets/images/gd2.png">
+          <img src="assets/images/gd2-min.png">
         </div>
         <div class="work personalwork">
           <div class="workcover">Laud'em | UI/UX & Branding Design</div>
-          <img src="assets/images/laud4.png">
+          <img src="assets/images/laud4-min.png">
         </div>
       </div>
     </div>
@@ -141,7 +141,7 @@
       </div>
       <div class="work interconnectedwork" id="last">
         <div class="workcover">Interconnected</div>
-        <img src="assets/images/interconnected.png" class="hor">
+        <img src="assets/images/interconnected-min.png" class="hor">
       </div>
       <div class="work woodenwork">
         <div class="workcover">Wooden</div>
@@ -156,7 +156,7 @@
 
   <div class="sectionpop" id="aboutpop">
     <div class="about-wrapper">
-      <div class="aboutdiv aboutphoto"><div class="inneraboutphoto"><img src="assets/images/upside.png"></div></div>
+      <div class="aboutdiv aboutphoto"><div class="inneraboutphoto"><img src="assets/images/upside-min.png"></div></div>
       <div class="aboutdiv aboutcontent">
         <div class="cursive"> <b>Hi there!</b> </div>
         <h1 style="margin-top: 20px"> Adriana Babakanian </h1>
@@ -251,7 +251,7 @@
       <p> I started off by brainstorming with some rather cliche illustrations iconic of eating and savings, as well as lettering
         many iterations of the word "Feaster." </p>
     </div>
-      <div class="introimage-wrapper"><div class="introimage gray"><img src="assets/images/brainstorm.png" class="hor"></div></div>
+      <div class="introimage-wrapper"><div class="introimage gray"><img src="assets/images/brainstorm-min.png" class="hor"></div></div>
       <div class="caption"> <p><em> A sample of the brainstorming process behind the Feaster logo and logo text. </em> </p></div>
       <div class="workcontent">
         <p> After some more brainstorming, I came up with the idea of a piggy bank. Pigs are iconic of eating,
@@ -273,14 +273,14 @@
       </div>
       <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/pigprogression2.png" class="hor"></div></div>
       <div class="caption"> <p> <em> A rough timeline of the logo's progression. </em> </p></div>
-      <div class="introimage-wrapper"><div class="introimage gray"><img src="assets/images/logoprogression.png" class="hor"></div></div>
+      <div class="introimage-wrapper"><div class="introimage gray"><img src="assets/images/logoprogression-min.png" class="hor"></div></div>
       <div class="caption"> <p> <em> Some of the iterations of the logo text. </em> </p></div>
       <div class="workcontent">
         <p> After many, many, many iterations, I am very proud to present the final products! </p>
       </div>
       <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/marketing.png"></div></div>
       <div class="caption"> <p> <em> The final version of Feaster's logo. </em> </p></div>
-      <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/fl.png" class="hor"></div></div>
+      <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/fl-min.png" class="hor"></div></div>
       <div class="caption"> <p> <em> The final version of Feaster's logo text. </em> </p></div>
       <div class="workcontent">
         <h2 class="tech"> Site Layout </h2>
@@ -294,7 +294,7 @@
 
 
 
-      <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/fm2.png"></div></div>
+      <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/fm2-min.png"></div></div>
       <div class="caption bottom"> <p><em> A sticker that restaurants put on their windows to show that they offer deals on Feaster, as well as a
         flyer that provides a link to sign up for a specific business's offers. </em> </p></div>
     </div>
@@ -317,18 +317,18 @@
         that come to mind when I think of our campus. </p>
       <h2 class="tech"> Doe Library </h2>
     </div>
-    <div class="introimage-wrapper"><div class="introimage map"><img src="assets/images/doe.png"></div></div>
+    <div class="introimage-wrapper"><div class="introimage map"><img src="assets/images/doe-min.png"></div></div>
     <div class="caption"> <p><em> One of my favorite places to study is North Reading Room, located on the second story of Doe Library. </em> </p></div>
     <div class="workcontent"><h2 class="tech"> Hearst Memorial Mining Building </h2></div>
-    <div class="introimage-wrapper"><div class="introimage map"><img src="assets/images/hearst.png"></div></div>
+    <div class="introimage-wrapper"><div class="introimage map"><img src="assets/images/hearst-min.png"></div></div>
     <div class="caption"> <p><em> If you're ever on campus, be sure to check out the inside of this building! It is stunningly beautiful, and
     also has a fascinating role in the history of mining and metallurgy. </em> </p></div>
     <div class="workcontent"><h2 class="tech"> Campanile </h2></div>
-    <div class="introimage-wrapper"><div class="introimage map"><img src="assets/images/camp2.png"></div></div>
+    <div class="introimage-wrapper"><div class="introimage map"><img src="assets/images/camp2-min.png"></div></div>
     <div class="caption"> <p><em> Fun fact: our beloved Campanile is the tallest university clock tower, as well as the
       third tallest bell & clock tower in the world!</em> </p></div>
     <div class="workcontent"><h2 class="tech"> Sather Gate </h2></div>
-    <div class="introimage-wrapper"><div class="introimage map"><img src="assets/images/sather.png"></div></div>
+    <div class="introimage-wrapper"><div class="introimage map"><img src="assets/images/sather-min.png"></div></div>
     <div class="caption bottom"> <p><em> Sather Gate is always beautiful, but it looks especially lovely when it is lit up at night in the rain. </em> </p></div>
   </div>
 
@@ -340,11 +340,11 @@
         <p> When random inspiration strikes, I often create little illustrations or icons just for the fun of it. Some of these
           little pieces have shown up in my other works &mdash; if you look you at my other projects, you will find them! </p>
       </div>
-      <div class="longimage-wrapper noborder"><div class="longimage"><img src="assets/images/takeout.png" class="hor"></div></div>
-      <div class="randimage-wrapper"><div class="randimage"><img src="assets/images/rolls.png"></div></div>
-      <div class="randimage-wrapper"><div class="randimage"><img src="assets/images/techs.png" class="hor"></div></div>
-      <div class="longimage-wrapper noborder"><div class="longimage"><img src="assets/images/school.png" class="hor"></div></div>
-      <div class="randimage-wrapper bottom"><div class="randimage"><img src="assets/images/basic.png"></div></div>
+      <div class="longimage-wrapper noborder"><div class="longimage"><img src="assets/images/takeout-min.png" class="hor"></div></div>
+      <div class="randimage-wrapper"><div class="randimage"><img src="assets/images/rolls-min.png"></div></div>
+      <div class="randimage-wrapper"><div class="randimage"><img src="assets/images/techs-min.png" class="hor"></div></div>
+      <div class="longimage-wrapper noborder"><div class="longimage"><img src="assets/images/school-min.png" class="hor"></div></div>
+      <div class="randimage-wrapper bottom"><div class="randimage"><img src="assets/images/basic-min.png"></div></div>
     </div>
   </div>
 
@@ -370,7 +370,7 @@
         four iterations we created for this season. Each flyer depicts a representation of the workspace for a member from each of the four different tiers of the club. I was responsible for
         making the desk of the graphic designer. I love how these turned out &mdash; they do an excellent job of capturing the spirit of Innovative Design. </p>
     </div>
-    <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/flyersfrontback.png" class="ver"></div></div>
+    <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/flyersfrontback-min.png" class="ver"></div></div>
     <div class="caption"> <p><em> The front and back of each of the recruitement flyers. </em> </p></div>
     <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/flyersall.png" class="hor"></div></div>
     <div class="caption"> <p><em> All four iterations of the recruitement flyers. The last three were made by other memebers of my tier. </em> </p></div>
@@ -397,13 +397,13 @@
         on the App Store and Google Play within the next few weeks &mdash; be sure to check back soon for a link to download the very first app that I
         designed! </p>
     </div>
-    <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/laud4.png"></div></div>
+    <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/laud4-min.png"></div></div>
     <div class="workcontent">
       <h2 class="tech"> Technologies: Adobe Illustrator, Sketch, Zeplin </h2>
       <p> I cannot yet disclose all of the screens of the app, but below are some of the branding materials that I created for
         Laud'Em. </p>
     </div>
-    <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/laudlogos.png"></div></div>
+    <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/laudlogos-min.png"></div></div>
     <div class="caption bottom"> <p><em> Logo text used for branding & marketing materials. </em> </p></div>
   </div>
 
@@ -519,7 +519,7 @@
 
   <div class="workpop" id="interconnectedpop">
     <div class="goback clickable artgoback"><div class="up"><img src="assets/images/up.png" class="x"></div><p style="margin-top:0px"> back to fine art </p></div>
-    <div class="artwork-wrapper"><img src="assets/images/interconnected.png"></div>
+    <div class="artwork-wrapper"><img src="assets/images/interconnected-min.png"></div>
   </div>
 
   <div class="workpop" id="woodenpop">
@@ -562,13 +562,13 @@
           <div id="laptop"><img src="assets/images/laptop.png"></div>
           <div id="tea"><img src="assets/images/tea.png"></div>
           <div id="pentool"><img src="assets/images/pentool.png"></div>
-          <div class="inner-color-box clickable"><img src="assets/images/me3.png"></div>
+          <div class="inner-color-box clickable"><img src="assets/images/me3-min.png"></div>
         </div>
         <div class="text-box">
           <h1> Hello world! </h1>
           <p> I'm Adriana &mdash; a UI/UX engineer, graphic designer, and web
             developer studying Math & Computer Science at the University of
-            California, Berkeley. If you like elephants, enamel pins, shrimp
+            California, Berkeley. If you like elephants,
             tempura, or string lights, consider me your new best friend. </p>
           <div class="h-wrap clickable" id="aboutme">
             <div class="h-box h-text"> <b>about me</b> </div>
@@ -584,13 +584,13 @@
         <div id="chop"><img src="assets/images/chop.png"></div>
         <div id="g-sub-text"> Icons, doodles, random whimsical ideas - you name it. </div>
         <div id="sushi-wrap">
-          <img src="assets/images/dragon.png">
+          <img src="assets/images/dragon-min.png">
         </div>
       </div>
 
 
     <div class="clickable" id="dev-wrapper">
-      <div id="dev-img"><img src="assets/images/webdev.png"></div>
+      <div id="dev-img"><img src="assets/images/webdev-min.png"></div>
       <div id="code"><img src="assets/images/code.png"></div>
       <div id="dev-text">
         <h1 style="color:white;padding:30px;font-size:50px;padding-bottom:0px">code</h1>
