added design section on HEX

--- a/index.html
+++ b/index.html
@@ -373,7 +373,9 @@
     <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/flyersfrontback-min.png" class="ver"></div></div>
     <div class="caption"> <p><em> The front and back of each of the recruitement flyers. </em> </p></div>
     <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/flyersall.png" class="hor"></div></div>
-    <div class="caption"> <p><em> All four iterations of the recruitement flyers. The last three were made by other memebers of my tier. </em> </p></div>
+    <div class="caption"> <p><em> All four iterations of the recruitement flyers. The last three were made by other members of my tier. </em> </p></div>
+    <div class="introimage-wrapper"><div class="introimage" style="outline-color: white;"><img src="assets/images/flyerreal-min.png"></div></div>
+    <div class="caption"> <p><em> A picture of the flyers being handed out from our table on Sproul Plaza on campus. </em> </p></div>
     <div class="workcontent">
       <h2 class="tech"> InnoD Logo Design </h2>
       <p> Part of our recruitement campaign every semester is making a new logo out of our existing logo. InnoD's logo is made of three cascading, overlapping circles &mdash;
@@ -381,7 +383,24 @@
         picture for our <a href="https://www.facebook.com/InnovativeDesignUCB/" target="_blank"> Facebook page </a>.
     </div>
     <div class="introimage-wrapper"><div class="introimage blue"><img src="assets/images/desklogomin.png"></div></div>
-    <div class="caption bottom"> <p><em> Innovative Design's semesterly logo for Spring 2017. </em> </p></div>
+    <div class="caption"> <p><em> Innovative Design's semesterly logo for Spring 2017. </em> </p></div>
+    <div class="workcontent">
+      <h2 class="tech"> HEX: Hone & Explore Design Workshops </h2>
+      <p> Each semester, InnoD holds a series of design workshops hosted by our members open to all students in the
+        Berkeley campus community. The goal of these free lessons is to make all types of design accessible to everyone who
+        is interested in honing their skills or exploring new ones. This semester I will be running a workshop on Branding and Marketing Design.
+        HEX is coming up in just a few weeks, so make sure to check back for all of the finalized marketing materials as well as
+        a summary of the workshop I will be teaching! </p>
+      <h2 class="tech"> Brainstorming: HEX Theme </h2>
+      <p> Every semester we come up with a different idea for the theme of HEX. Since HEX stands for "Hone & Explore," we try to
+        brainstorm ideas that communicate that the mission of HEX is to be a fun adventure in design education. This semester, we
+        decided to brand the event with the overall theme of vintage adventure maps, retro national park posters, and Boy Scout-inspired
+        badges and pins. I am very exicted for the final products! <p>
+      <p> Below are some of my sketches brainstorming ideas for the buttons, stickers, flyers, and other marketing materials that
+         we are going to hand out while advertising HEX. </p>
+    </div>
+    <div class="introimage-wrapper"><div class="introimage"><img src="assets/images/hexsketch-min.png"></div></div>
+    <div class="caption bottom"> <p><em> Some of my brainstorming for the marketing materials promoting our HEX Workshops. </em> </p></div>
   </div>
 
   <div class="workpop" id="weatherpop">
@@ -476,9 +495,9 @@
     <div class="goback clickable codegoback"><div class="up"><img src="assets/images/up.png" class="x"></div><p style="margin-top:0px"> back to code </p></div>
     <div class="workcontent intro">
       <h1> Personal Site Iteration </h1>
-      <p> I for some reason decided that it would be a good idea to build up a personal site from sratch &mdash; no Bootstrap templates,
-        no framerworks, just a blank HTML document with equally blank stylesheets and scripts. Although I am aware that all of the resources for
-        developers out there renders this approach rather impratical, I am very glad that I did it. I've never been more confident in my understanding
+      <p> I for some reason decided that it would be a good idea to build up a personal site from scratch &mdash; no Bootstrap templates,
+        no frameworks, just a blank HTML document with equally blank stylesheets and scripts. Although I am aware that all of the resources for
+        developers out there render this approach rather impratical, I am very glad that I did it. I've never been more confident in my understanding
         of HTML, CSS, and JavaScript, and it was a lot of fun and extremely rewarding to be able to StackOverflow my way through every obstacle that I
         encountered and end up with a product that is completely my own! </p>
       <p> <em> Note: for now, please fullscreen your browser, since I am in the process of optimizing the responsiveness of the homepage! </em> </p>
