fixed bug in header font link

--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
   <title> Adriana Babakanian </title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script language="JavaScript" type="text/javascript" src="assets/js/script.js"></script>
-  <link rel="icon" href="assets/images/logo2.png">
+  <link rek="icon" href="assets/images/logo2.png">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Raleway">
   <link rel="stylesheet" type="text/css"
-      href="https://fonts.googxleapis.com/css?family=Muli">
+      href="https://fonts.googleapis.com/css?family=Muli">
   <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Puritan">
   <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=PT-Serif">
+</head>
 <body>
 
   <div class="menu">
@@ -621,7 +622,7 @@
 
     <div class="clickable" id="fine-wrapper">
       <div id="fine-img-wrap">
-        <div id="fine-img"><img src="assets/images/arts-min.png"></div>
+        <div id="fine-img"><img src="assets/images/arts.png"></div>
       </div>
       <div id="pallet"><img src="assets/images/pallet.png"></div>
       <div id="fine-text">
