added cal hacks to about

--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
           roaming around San Francisco with a pack of instant film,
           eating carne asada fries, reading random nerdy math books, and going on beachside hikes with my dog Holly. </p>
         <p>
+          Director & Lead Designer at <a href="https://calhacks.io/" target="_blank">Cal Hacks</a> </br>
           Branding, Marketing, & UI/UX Designer at <a href="https://www.feasterworks.com" target="_blank">Feaster</a> </br>
-          <a href="http://innovativedesign.club/" target="_blank"> Innovative Design</a>, Marketing & Gold Tier </br>
-          UI/UX & Branding Designer at <span style="color:#f85563;">Laud'Em</span>
+          <a href="http://innovativedesign.club/" target="_blank"> Innovative Design</a>, Marketing & Gold Tier
         </p>
         <p> <b>Web Development &nbsp &nbsp &nbsp </b> Ruby on Rails | HTML | CSS | JavaScript </br>
         <b>Programming &nbsp &nbsp &nbsp </b> Java | Python | Ruby | C (in progress)</br>
